--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.TodoeditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.TodoaddActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
