--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.TodoeditActivity"
+            android:name="com.example.wharareyouupto2.ui.view.activity.TodoeditActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.TodoaddActivity"
+            android:name="com.example.wharareyouupto2.ui.view.activity.TodoaddActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.view.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
