--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
         <activity
-            android:name="com.example.wharareyouupto2.ui.view.activity.TodoeditActivity"
+            android:name=".ToDoInsideActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.wharareyouupto2.ui.view.activity.TodoaddActivity"
+            android:name=".TodoeditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TodoaddActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.activity.MainActivity"
