--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,10 @@
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
         <activity
-            android:name=".ToDoInsideActivity"
+            android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
         <activity
-            android:name=".TodoeditActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TodoaddActivity"
+            android:name=".ui.view.activity.ToDoEditActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.activity.MainActivity"
