--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
+
         <receiver
             android:name=".alarm.AlarmReceiver"
             android:enabled="true"
-            android:exported="false">
-        </receiver>
+            android:exported="false"></receiver>
+
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
@@ -31,6 +32,9 @@
             android:exported="false" />
         <activity
             android:name=".ui.view.activity.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.view.activity.IntroActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
