--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
-
         <receiver
-            android:name=".alarm.AlarmReceiver"
-            android:enabled="true"
-            android:exported="false"></receiver>
-
+            android:name=".alarm.Notifications"
+            android:enabled="true"/>
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
