--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Wharareyouupto2"
         tools:targetApi="31">
         <receiver
-            android:name=".alarm.Notifications"
+            android:name=".util.Notifications"
             android:enabled="true"/>
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
