--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <receiver
             android:name=".util.Notifications"
-            android:enabled="true"/>
+            android:enabled="true"
+            android:exported="false"/>
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
