--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.wharareyouupto2">
+    package="com.example.wharareyouupto2" >
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
@@ -14,10 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wharareyouupto2"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".SettingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_setting"
+            android:theme="@style/Theme.Wharareyouupto2.NoActionBar" />
+
         <receiver
             android:name=".util.Notifications"
-            android:exported="false"/>
+            android:exported="false" />
+
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
@@ -33,7 +40,7 @@
         <activity
             android:name=".ui.view.activity.IntroActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
