--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.wharareyouupto2" >
+    package="com.example.wharareyouupto2">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
@@ -14,7 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wharareyouupto2"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.view.activity.OssLicensesMenuActivity"
+            android:exported="false" />
+
         <receiver
             android:name=".util.Notifications"
             android:exported="false" />
@@ -22,7 +26,6 @@
         <activity
             android:name=".ui.view.activity.SettingActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.view.activity.ToDoInsideActivity"
             android:exported="false" />
@@ -38,7 +41,7 @@
         <activity
             android:name=".ui.view.activity.IntroActivity"
             android:exported="true"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
